# ProyectoFinal-ANIOT-RPI1-RPI2

./: .cproject  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/api_rest/: .project  CMakeLists.txt
components/api_rest/src/: api_rest.c
components/coap/include/: coap_client.h
components/coap/src/: CMakeLists.txt  coap_client.c
components/coap_client/: CMakeLists.txt  idf_component.yml
components/coap_client/include/: coap_client.h
components/coap_client/src/: coap_client.c
components/esp32_SGP30/: .cproject  .project
components/esp32_SGP30/src/: SGP30.c
components/espressif__cbor/: .project
components/espressif__qrcode/: .cproject  .project
components/i2c_config/: .cproject  .project  CMakeLists.txt
components/i2c_config/include/: i2c_config.h
components/i2c_config/src/: i2c_config.c
components/mqtt/: .cproject  .project  CMakeLists.txt  Kconfig.projbuild  mqtt_api.c  mqtt_api.h  node_key.pem  node_new_cert.pem
components/mqtt/cert/: client.crt  client.csr  client.key  server_key.pem
components/mqtt/include/: mqtt.h
components/mqtt/src/: mqtt-api.c  mqtt.c  mqtt_publisher.c
components/muestradora/: .project  CMakeLists.txt  Kconfig.projbuild
components/muestradora/include/: muestradora.h
components/muestradora/src/: muestradora.c
components/nvs_component/src/: nvs_component.c
components/ota/: CMakeLists.txt  Kconfig.projbuild
components/ota/include/: ota.h
components/ota/src/: ota.c
components/provisionamiento/: CMakeLists.txt  Kconfig.projbuild  provisionamiento.c  provisionamiento.h
components/scan_ble/: CMakeLists.txt  scan_gap_ble.c  scan_gap_ble.h
components/scan_ble/include/: scan_gap_ble.h
components/scan_ble/src/: scan_gap_ble.c
components/scan_gap_ble/: CMakeLists.txt  scan_gap_ble.c  scan_gap_ble.h
components/sntp/: CMakeLists.txt
components/sntp/include/: own_sntp.h
components/sntp/src/: own_sntp.c
components/wifi_station/: CMakeLists.txt  wifi_station.c  wifi_station.h
main/: .cproject  CMakeLists.txt  Kconfig.projbuild  aniot_main.c  api_rest.c  app_main.c  coap_client.c  main.c  main_wifi.c  mqtt_publisher.c  scan_gap_ble.c  station_example_main.c  wifi_provisioning.c
main/src/: CMakeLists.txt  Kconfig.projbuild  mqtt.c  mqtt_publisher.c
thingsboard/dashboards/: ota_for_esp32.json
thingsboard/device_profile/: esp32_ota.json
